usr/css/custom.css
/* ... */
.remark-slide-content .vtop-25 h1, .remark-slide-content .vtop-25 h2, .remark-slide-content .vtop-25 h3, .remark-slide-content .vtop-25 h4, .remark-slide-content .vtop-25 h5, .remark-slide-content .vtop-25 h6 {margin-top: 0;}
.remark-slide-content .vtop-30 h1, .remark-slide-content .vtop-30 h2, .remark-slide-content .vtop-30 h3, .remark-slide-content .vtop-30 h4, .remark-slide-content .vtop-30 h5, .remark-slide-content .vtop-30 h6 {margin-top: 0;}
.remark-slide-content .vtop-35 h1, .remark-slide-content .vtop-35 h2, .remark-slide-content .vtop-35 h3, .remark-slide-content .vtop-35 h4, .remark-slide-content .vtop-35 h5, .remark-slide-content .vtop-35 h6 {margin-top: 0;}
.remark-slide-content .vtop-40 h1, .remark-slide-content .vtop-40 h2, .remark-slide-content .vtop-40 h3, .remark-slide-content .vtop-40 h4, .remark-slide-content .vtop-40 h5, .remark-slide-content .vtop-40 h6 {margin-top: 0;}
.remark-slide-content .vtop-45 h1, .remark-slide-content .vtop-45 h2, .remark-slide-content .vtop-45 h3, .remark-slide-content .vtop-45 h4, .remark-slide-content .vtop-45 h5, .remark-slide-content .vtop-45 h6 {margin-top: 0;}

/* HORIZONTAL CONTENT ALIGNMENT */
/* from left */
.hleft-0 { position: relative; left: 0%;}
.hleft-5 { position: relative; left: 5%;}
.hleft-10 { position: relative; left: 10%;}
.hleft-15 { position: relative; left: 15%;}
.hleft-20 { position: relative; left: 20%;}
.hleft-25 { position: relative; left: 25%;}
.hleft-30 { position: relative; left: 30%;}
.hleft-35 { position: relative; left: 35%;}
.hleft-40 { position: relative; left: 40%;}
.hleft-45 { position: relative; left: 45%;}
/* from right */
.hright-0 { position: relative; right: 0%;}
.hright-5 { position: relative; right: 5%;}
.hright-10 { position: relative; right: 10%;}
.hright-15 { position: relative; right: 15%;}
.hright-20 { position: relative; right: 20%;}
.hright-25 { position: relative; right: 25%;}
.hright-30 { position: relative; right: 30%;}
.hright-35 { position: relative; right: 35%;}
.hright-40 { position: relative; right: 40%;}
.hright-45 { position: relative; right: 45%;}
/* padding left */
.padding-left-0 {position: relative; padding-left: 0%;}
.padding-left-5 {position: relative; padding-left: 5%;}
.padding-left-10 {position: relative; padding-left: 10%;}
.padding-left-15 {position: relative; padding-left: 15%;}
.padding-left-20 {position: relative; padding-left: 20%;}
.padding-left-25 {position: relative; padding-left: 25%;}
.padding-left-30 {position: relative; padding-left: 30%;}
.padding-left-35 {position: relative; padding-left: 35%;}
.padding-left-40 {position: relative; padding-left: 40%;}
.padding-left-45 {position: relative; padding-left: 45%;}
/* padding right */
.padding-right-0 {position: relative; padding-right: 0%;}
.padding-right-5 {position: relative; padding-right: 5%;}
.padding-right-10 {position: relative; padding-right: 10%;}
.padding-right-15 {position: relative; padding-right: 15%;}
.padding-right-20 {position: relative; padding-right: 20%;}
.padding-right-25 {position: relative; padding-right: 25%;}
.padding-right-30 {position: relative; padding-right: 30%;}
.padding-right-35 {position: relative; padding-right: 35%;}
.padding-right-40 {position: relative; padding-right: 40%;}
.padding-right-45 {position: relative; padding-right: 45%;}
/* margin left */
.margin-left-0 {position: relative; margin-left: 0%;}
.margin-left-5 {position: relative; margin-left: 5%;}
.margin-left-10 {position: relative; margin-left: 10%;}
.margin-left-15 {position: relative; margin-left: 15%;}
.margin-left-20 {position: relative; margin-left: 20%;}
.margin-left-25 {position: relative; margin-left: 25%;}
.margin-left-30 {position: relative; margin-left: 30%;}
.margin-left-35 {position: relative; margin-left: 35%;}
.margin-left-40 {position: relative; margin-left: 40%;}
.margin-left-45 {position: relative; margin-left: 45%;}
/* margin right */
.margin-right-0 {position: relative; margin-right: 0%;}
.margin-right-5 {position: relative; margin-right: 5%;}
.margin-right-10 {position: relative; margin-right: 10%;}
.margin-right-15 {position: relative; margin-right: 15%;}
.margin-right-20 {position: relative; margin-right: 20%;}
.margin-right-25 {position: relative; margin-right: 25%;}
.margin-right-30 {position: relative; margin-right: 30%;}
.margin-right-35 {position: relative; margin-right: 35%;}
.margin-right-40 {position: relative; margin-right: 40%;}
.margin-right-45 {position: relative; margin-right: 45%;}

/* IMAGES */
/* by default, images are wrapped in <p> by remark.js when on newline after `[`
- When positioning images in a column/row block containing multiple items,
row/height attributes might be the only method of sizing the <img>
- This property is for images that are the ONLY element in their column/row block OR container
- In practice this is for the <p><span><img></img></span></p> case
This is used as such (creates a <span> container for <img>):
    .img-cover.content[![](assets/img/topic.png)]
Confusing b/c <p> is created when image is on newline after `[`
However, there is behavior where <p><span><img></img></span></p> occurs, and this is for THAT occurence
*/
/* image sizing is performed using the max-width property*/
div p {
  display: inline;
}
/* The flip box container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
.flip-box {
  background-color: transparent; /* does this do anything? */
  perspective: 1000px; /* Remove this if you don't want the 3D effect */
}
/* This container is needed to position the front and back side */
.flip-box-inner {
  position: relative;
  width: 100%;
  height: 100%;
  transition: transform 1.2s;
  transform-style: preserve-3d;
}
/* Do a horizontal flip when you move the mouse over the flip box container */
.flip-box:hover .flip-box-inner {
  transform: rotateY(180deg);
}
/* ... */

